back to printint div

--- a/templates/create_prescription.html
+++ b/templates/create_prescription.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="form-actions">
-                <button type="button" class="btn-primary" onclick="return renderPdf('a4-preview')">Salvar
+                <button type="button" class="btn-primary" onclick="return printDiv('a4-preview')">Salvar
                     Prescrição</button>
             </div>
         </form>
