--- a/templates/prescriptions_history.html
+++ b/templates/prescriptions_history.html
@@ -11,7 +11,7 @@
                 <select name="patient" id="patient_filter">
                     <option value="">Todos os pacientes</option>
                     {% for patient in patients %}
-                    <option value="{{ patient.id }}">
+                    <option value="{{ patient.id }}" {% if selected_patient and selected_patient.id == patient.id %}selected{% endif %}>
                         {{ patient.name }}
                     </option>
                     {% endfor %}
@@ -20,14 +20,13 @@
             
             <div class="form-group">
                 <label for="date_from">Data Inicial</label>
-                <input type="date" name="date_from" id="date_from">
+                <input type="date" name="date_from" id="date_from" value="{{ date_from.strftime('%Y-%m-%d') if date_from else '' }}">
             </div>
             
             <div class="form-group">
                 <label for="date_to">Data Final</label>
-                <input type="date" name="date_to" id="date_to">
+                <input type="date" name="date_to" id="date_to" value="{{ date_to.strftime('%Y-%m-%d') if date_to else '' }}">
             </div>
-
             <button type="submit" class="btn-primary">Filtrar</button>
         </form>
     </div>
@@ -59,7 +58,7 @@
             <div class="prescription-card">
                 <div class="prescription-content">
                     <p><strong>Paciente:</strong> {{ prescription.patient.name }}</p>
-                    <p><strong>Data:</strong> {{ prescription.date_prescribed }}</p>
+                    <p><strong>Data:</strong> {{ prescription.date_prescribed.strftime('%d/%m/%Y') }}</p>
                 </div>
                 <div class="prescription-actions">
                     <a href="{{ url_for('view_prescription', id=prescription.id) }}" class="btn-primary">Abrir</a>
