--- a/templates/register_patient.html
+++ b/templates/register_patient.html
@@ -6,14 +6,17 @@
 
     <h1>Cadastrar/Editar Paciente</h1>
 
-    <select id="patient-select">
-        <option value="new_patient">***Cadastrar Novo Paciente***</option>
-        {% for patient in patients %}
-        <option value="{{ patient.id }}">{{ patient.name }}</option>
-        {% endfor %}
-    </select>
-
-    <p><br></br><br></br></p>
+    <div class="patient-select-container">
+        <h2>Selecione um paciente existente ou cadastre um novo</h2>
+        <select id="patient-select">
+            <option value="new_patient">***Cadastrar Novo Paciente***</option>
+            {% for patient in patients %}
+            <option value="{{ patient.id }}">{{ patient.name }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    
+    <hr class="form-separator">
 
     <form id="patientForm" method="POST" action="{{ url_for('register_patient') }}" class="patient-form">
         <div id="patient-section">
@@ -23,13 +26,13 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="name">Nome Completo</label>
-                    <input type="text" name="name" id="name" value="{{ patient.name if patient else '' }}" required>
+                    <input type="text" name="name" id="name" required>
                 </div>
 
                 <div class="form-group">
                     <label for="gender">Sexo</label>
-                    <select name="gender" id="gender" required>
-                        <option value="">Selecione o sexo</option>
+                    <select name="gender" id="gender">
+                        <option value="new_patient">Selecione o sexo</option>
                         <option value="Masculino">Masculino</option>
                         <option value="Feminino">Feminino</option>
                     </select>
@@ -37,22 +40,19 @@
 
                 <div class="form-group">
                     <label for="cpf">CPF</label>
-                    <input maxlength=14 type="text" name="cpf" id="cpf" value="{{ patient.cpf if patient else '' }}"
-                        required>
+                    <input maxlength=14 type="text" inputmode="numeric" name="cpf" id="cpf" required>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group">
                     <label for="birth_date">Data de Nascimento</label>
-                    <input type="date" name="birth_date" id="birth_date"
-                        value="{{ patient.birth_date if patient else '' }}" min="1900-01-01" max="2100-12-12">
+                    <input type="date" name="birth_date" id="birth_date" min="1900-01-01" max="2100-12-12">
                 </div>
 
                 <div class="form-group">
                     <label for="phone">Telefone</label>
-                    <input type="tel" name="phone" id="phone" value="{{ patient.phone if patient else '' }}" required
-                        OnKeyPress="formatPhone('(##) #####-####',this)" maxlength="15">
+                    <input type="tel" name="phone" id="phone" inputmode="numeric" required>
                 </div>
             </div>
         </div>
@@ -85,13 +85,13 @@
                 <div class="form-group">
                     <label for="state">Estado</label>
                     <select name="state" id="state">
-                        <option value="">Selecione o estado</option>
+                        <option value="init">Selecione o estado</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="city">Cidade</label>
                     <select name="city" id="city">
-                        <option value="">Selecione a cidade</option>
+                        <option value="init">Selecione a cidade</option>
                     </select>
                 </div>
             </div>
@@ -99,28 +99,24 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="street">Rua</label>
-                    <input type="text" name="street" id="street" value="{{ patient.street if patient else '' }}"
-                        required>
+                    <input type="text" name="street" id="street" required>
                 </div>
 
                 <div class="form-group">
                     <label for="house_number">Número</label>
-                    <input type="text" name="house_number" id="house_number"
-                        value="{{ patient.house_number if patient else '' }}" required>
+                    <input type="text" name="house_number" id="house_number" required>
                 </div>
 
                 <div class="form-group">
                     <label for="district">Bairro</label>
-                    <input type="text" name="district" id="district" value="{{ patient.district if patient else '' }}"
-                        required>
+                    <input type="text" name="district" id="district" required>
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group">
                     <label for="additional_info">Complemento</label>
-                    <input type="text" name="additional_info" id="additional_info"
-                        value="{{ patient.additional_info if patient else '' }}">
+                    <input type="text" name="additional_info" id="additional_info">
                 </div>
             </div>
         </div>
@@ -128,7 +124,7 @@
         <div class="form-group">
             <label for="medical_history">Histórico Médico</label>
             <textarea name="medical_history" id="medical_history"
-                rows="4">{{ patient.medical_history if patient else '' }}</textarea>
+                rows="4"></textarea>
         </div>
 
         <div class="form-actions">
