--- a/templates/register_patient.html
+++ b/templates/register_patient.html
@@ -72,23 +72,23 @@
                 </div>
             </div>
 
-            <div id="brazil-fields" style="display: none;">
+            <div class="form-row" id="brazil-fields" style="display: none;">
                     <div class="form-row">
                         <div class="form-group">
                             <label for="cep">CEP</label>
-                            <input type="text" id="cep" maxlength="9">
+                            <input name="cep" type="text" id="cep" maxlength="9">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="state">Estado</label>
-                            <select id="state">
+                            <select id="state" name="state">
                                 <option value="init">Selecione o estado</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <label for="city">Cidade</label>
-                            <select id="city">
+                            <select id="city" name="city">
                                 <option value="init">Selecione a cidade</option>
                             </select>
                         </div>
