--- a/templates/register_patient.html
+++ b/templates/register_patient.html
@@ -65,7 +65,7 @@
                 <div class="form-group">
                     <label for="country">País</label>
                     <select name="country" id="country" required>
-                        <option value="">Selecione o país</option>
+                        <option value="init">Selecione o país</option>
                         <option value="BR">Brasil</option>
                         <option value="other">Outros</option>
                     </select>
