--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="dashboard">
-    <h1>Bem-vinda, Dra. Emanuele</h1>
+    <h1>Bem-vinda, Dr. {{who}}</h1>
 
     <div class="quick-actions">
         <div class="action-card">
